--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                     CPAN-Testers-Common-Article
-version:                  0.44
+version:                  0.45
 abstract:                 Parse a CPAN Testers NNTP article
 author:
   - Barbie <barbie@cpan.org>
@@ -30,7 +30,7 @@ build_requires:
 provides:
   CPAN::Testers::Common::Article:
     file:     lib/CPAN/Testers/Common/Article.pm
-    version:  0.44
+    version:  0.45
 
 no_index:
   directory:
@@ -38,8 +38,9 @@ no_index:
     - examples
 
 resources:
-  license:    http://dev.perl.org/licenses/
+  license:    http://www.perlfoundation.org/artistic_license_2_0
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Common-Article
+  repository: http://github.com/barbie/cpan-testers-common-article
 
 meta-spec:
    version:   1.4
