--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                     CPAN-Testers-Common-Article
-version:                  0.45
+version:                  0.46
 abstract:                 Parse a CPAN Testers NNTP article
 author:
   - Barbie <barbie@cpan.org>
@@ -30,7 +30,7 @@ build_requires:
 provides:
   CPAN::Testers::Common::Article:
     file:     lib/CPAN/Testers/Common/Article.pm
-    version:  0.45
+    version:  0.46
 
 no_index:
   directory:
@@ -41,8 +41,9 @@ resources:
   license:    http://www.perlfoundation.org/artistic_license_2_0
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Common-Article
   repository: http://github.com/barbie/cpan-testers-common-article
+  homepage:   http://devel.cpantesters.org
 
 meta-spec:
    version:   1.4
    url:       http://module-build.sourceforge.net/META-spec-v1.4.html
-generated_by: Hand 1.0
+generated_by: The Hand of Barbie 1.0
